--- a/SpringMVC/src/main/resources/application.properties
+++ b/SpringMVC/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.mvc.view.suffix: .jsp
 server.port: 9000
 
 
-spring.data.neo4j.uri=bolt://localhost:7687
-spring.data.neo4j.username=neo4j
-spring.data.neo4j.password=kuga1996
+logging.level.root= WARN
+logging.level.org.springframework.security= DEBUG
+logging.level.org.springframework.web= ERROR
+logging.level.org.hibernate= DEBUG
+logging.level.org.apache.commons.dbcp2= DEBUG
+
+logging.path = /logs 
+logging.pattern.file= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n 
