--- a/SpringMVC/src/main/resources/application.properties
+++ b/SpringMVC/src/main/resources/application.properties
@@ -7,12 +7,16 @@ spring.mvc.view.suffix: .jsp
 server.port: 9000
 
 
-logging.level.root= WARN
-logging.level.org.springframework.security= DEBUG
-logging.level.org.springframework.web= ERROR
-logging.level.org.hibernate= DEBUG
-logging.level.org.apache.commons.dbcp2= DEBUG
+#logging.level.root= WARN
+#logging.level.org.springframework.security= DEBUG
+#logging.level.org.springframework.web= ERROR
+#logging.level.org.hibernate= DEBUG
+#logging.level.org.apache.commons.dbcp2= DEBUG
+#
+#logging.path = /logs
+#logging.pattern.file= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+#logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
 
-logging.path = /logs 
-logging.pattern.file= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
-logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n 
+#https://www.concretepage.com/spring-boot/spring-boot-logging-example
+#https://dzone.com/articles/configuring-logback-with-spring-boot
+#https://www.mkyong.com/spring-boot/spring-boot-slf4j-logging-example/
